// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MessageStatus should do a snapshot test of the MessageStatus DOM 1`] = `
<div
  className="example-text sendbird-message-status"
>
  <div
    className="sendbird-message-status__icon sendbird-icon sendbird-icon-color--sent"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="button"
    style={
      Object {
        "height": "16px",
        "minHeight": "16px",
        "minWidth": "16px",
        "width": "16px",
      }
    }
    tabIndex="0"
  >
    <test-file-stub />
  </div>
  <br />
  <span
    className="sendbird-message-status__text sendbird-label sendbird-label--caption-3 sendbird-label--color-onbackground-2"
  >
    mock-date
  </span>
</div>
`;

exports[`MessageStatus should do a snapshot test of the failed MessageStatus DOM when isResendable: false 1`] = `
<div
  className="example-text sendbird-message-status"
>
  <div
    className="sendbird-message-status__icon sendbird-icon sendbird-icon-color--error"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="button"
    style={
      Object {
        "height": "16px",
        "minHeight": "16px",
        "minWidth": "16px",
        "width": "16px",
      }
    }
    tabIndex="0"
  >
    <test-file-stub />
  </div>
  <br />
</div>
`;

exports[`MessageStatus should do a snapshot test of the failed MessageStatus DOM when isResendable: true 1`] = `
<div
  className="example-text sendbird-message-status"
>
  <div
    className="sendbird-message-status__icon sendbird-icon sendbird-icon-color--error"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="button"
    style={
      Object {
        "height": "16px",
        "minHeight": "16px",
        "minWidth": "16px",
        "width": "16px",
      }
    }
    tabIndex="0"
  >
    <test-file-stub />
  </div>
  <br />
</div>
`;
